--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://abdoulsdevgit.github.io/react-rest-countries",
+  "homepage": "http://abdoulsdevgit.github.io",
   "name": "react-rest-countries",
   "version": "0.1.0",
   "private": true,
@@ -15,9 +15,9 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy": "npm run Build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
