modified added username

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://abdoulsdevgit.github.io",
+  "homepage": "http://abdoulsdevgit.github.io/react-rest-countries/",
   "name": "react-rest-countries",
   "version": "0.1.0",
   "private": true,
